--- a/paper/jampi-spark-dotmatrix.tex
+++ b/paper/jampi-spark-dotmatrix.tex
@@ -257,40 +257,38 @@ Applications reported only the dot product execution time. A single one-value re
 
 An important aspect of any distributed algorithm is its ability to scale up as the problem size increases. This is crucial for proving the value of an algorithmic solution, since it demonstrates its ability to solve increasingly complex instances of the same fundamental problem effectively. There are intrinsic issues when scaling distributed multi-processor algorithms. It is known, for instance, that the memory requirement for each processor increases as we add processors to a computation. Therefore, we must analyse the effect of problem size on the memory requiremens per processor. 
 
-For Cannon's algorithm, it is known that the communication complexity $D$ can be calculated as 
+For Cannon's algorithm multiplying two square matrices of size $n \times n$, the problem size $W$ is on the order of $n^3$, i.e.
+
+\begin{equation}
+	W = \mathcal{O}(n^3)
+	\label{eq:problem_size}
+\end{equation}
+
+For $p$ processors, the execution time for a matrix of size $n \times n$ is given as $T_p (n)$. It follows that parallelization of the problem yields a speed-up calculated as $\frac{W}{T_p (n)}$. 
+
+In addition, parallel execution of an $n \times n$ problem over $p$ nodes will incur a performance overhead of $T_o(n, p)$, including all communication costs. 
+
+it is known that the communication complexity $D$ can be calculated as 
 
 \begin{equation}
 	D = O(\frac{n^2}{\sqrt{p}})
 \end{equation}
 
-\noindent and therefore, for the average case complexity (and thus upper and lower bound of running time) of the algorithm, $\Theta$, it holds that
+\noindent More generally, it holds that the running time $T_p (n)$ for problem size $n$ and $p$ processors scales by a constant factor $c$, so that
 
 \begin{equation}
-	\Theta(n) = O(n^3)
-\end{equation}
-
-\noindent while the best-case running time $\Omega$ is
-
-\begin{equation}
-	\Omega(n) = O(\sqrt{p} n^2)
-\end{equation}
-
-\noindent More generally, it holds that the running time $T(n, p)$ for problem size $n$ and $p$ processors scales by a constant factor $c$, so that
-
-\begin{equation}
-	T(n, 1) \geq c \ To(n, p)
+	T_1(n) \geq c \ T_o(n, p)
 	\label{eq:general_runtime}
 \end{equation}
 
 \noindent From Equation~\eqref{eq:general_runtime}, it follows that
 
 \begin{equation}
-	n^3 \geq c \ \sqrt{p} \ n^2 \\
-	n \geq c \ \sqrt{p}
+	n^3 \geq c \ \sqrt{p} \ n^2 \ \implies \ n \geq c \ \sqrt{p}
 	\label{eq:scale_factor}
 \end{equation}
 
-\noindent It follows thus from Equation~\eqref{eq:scale_factor} and $M(n) = n^2$ that
+\noindent It follows thus from Equation~\eqref{eq:scale_factor} and the definition of $W$ in Equation~\eqref{eq:problem_size} that
 
 \begin{equation}
 	\frac{M(c \ \sqrt{p})}{p} = \frac{c^2 \ p}{p} = c^2
