Fix NAP's location (67).

--- a/paper/jampi-spark-dotmatrix.tex
+++ b/paper/jampi-spark-dotmatrix.tex
@@ -64,7 +64,7 @@
 
 \Authors{Tamas Foldi\textsuperscript{1}*, Chris von Csefalvay\textsuperscript{1}, Nicolas A Perez\textsuperscript{2}} % Authors
 \affiliation{\textsuperscript{1}\textit{Starschema Inc., Arlington, VA.}} % Author affiliation
-\affiliation{\textsuperscript{2}\textit{Hewlett Packard Enterprise Co.,  Miami, FL.}} % Author affiliation
+\affiliation{\textsuperscript{2}\textit{Hewlett Packard Enterprise Co.,  San Jose, CA.}} % Author affiliation
 \affiliation{*\textbf{Corresponding author}: tfoldi@starschema.net} % Corresponding author
 
 % \Keywords{Spark --- Matrix multiplication --- Algorithmic methods} % Keywords - if you don't want any simply remove all the text between the curly brackets
